[package]
name = "tcping"
version = "1.0.1"
authors = ["Dely <noreply>"]
edition = "2018"
description = "Simple utility to ping a TCP port implementation in Rust"
license = "LGPL-3.0"
homepage = "https://github.com/dph5199278/tcping-rs#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
chrono = "0.4"
dns-lookup = "2.0"
